Fix: Programs visible behind/between timeline headers

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -508,6 +508,8 @@ summary::marker {
 		position: absolute;
 		top: 0;
 		width: 100%;
+		height: calc(var(--kompassi-schedule-timeline-row-height) * 2);
+		background-color: var(--kompassi-bg);
 	}
 		#kompassi_schedule[data-display="timeline"] .headers .hint {
 			position: absolute;
